--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang='en'>
 
 <head>
+    <link rel="icon" href="./mm.png" />
     <meta charset='UTF-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <meta name='viewport' content='width=device-width, initial-scale=1.0'>
@@ -19,13 +20,13 @@
         </div>
         <p class="mt-4">
             <font style="vertical-align: inherit;">
-                <font style="vertical-align: inherit;">Tại Anbi, bạn có thể truy cập từ</font>
+                <font style="vertical-align: inherit;">Tại Anbi bạn có thể truy cập từ</font>
             </font>
             <font style="vertical-align: inherit;">
-                <font style="vertical-align: inherit;">https://www.robotanan.com/ </font>
+                <a href="https://www.robotanan.com/">https://www.robotanan.com</a>
             </font>
             <font style="vertical-align: inherit;">
-                <font style="vertical-align: inherit;">, một trong những ưu tiên chính của chúng tôi là quyền riêng tư
+                <font style="vertical-align: inherit;"> một trong những ưu tiên chính của chúng tôi là quyền riêng tư
                     của
                     khách truy cập. </font>
                 <font style="vertical-align: inherit;">Tài liệu Chính sách quyền riêng tư này chứa các loại thông tin
@@ -51,7 +52,7 @@
                 <div style="vertical-align: inherit;">Chính sách quyền riêng tư này chỉ áp dụng cho các hoạt động trực
                     tuyến của chúng tôi và có hiệu lực đối với khách truy cập vào trang web của chúng tôi liên quan đến
                     thông tin mà họ đã chia sẻ và/hoặc thu thập tại
-                    <a>https://www.robotanan.com/</a>. Chính sách này không áp
+                    <a href="https://www.robotanan.com/">https://www.robotanan.com</a>. Chính sách này không áp
                     dụng cho bất kỳ thông tin nào được thu
                     thập
                     ngoại tuyến hoặc qua các kênh khác ngoài trang web này.
@@ -185,13 +186,13 @@
             </font>
         </h2>
         <div>
-            <ul>
+            <p>
                 <font style="vertical-align: inherit;">
                     <font style="vertical-align: inherit;">Chúng tôi sẽ sử dụng thông tin cá nhân của bạn cho các mục
                         đích
                         sau:</font>
                 </font>
-            </ul>
+            </p>
             <li>
                 <font style="vertical-align: inherit;">
                     <font style="vertical-align: inherit;">Để cung cấp cho bạn dịch vụ chất lượng và bảo mật, vận hành
@@ -249,7 +250,7 @@
                         liên hệ với chúng tôi tại </font>
                 </font>
                 <font style="vertical-align: inherit;">
-                    <font style="vertical-align: inherit;">https://www.robotanan.com/ </font>
+                    <a href="https://www.robotanan.com/">https://www.robotanan.com</a>
                 </font>
                 <font style="vertical-align: inherit;">
                     <font style="vertical-align: inherit;">.</font>
@@ -368,7 +369,7 @@
                     và/hoặc giám sát và hướng dẫn hoạt động trực tuyến của họ. </font>
             </font>
             <font style="vertical-align: inherit;">
-                <font style="vertical-align: inherit;">https://www.robotanan.com/ </font>
+                <a href="https://www.robotanan.com/">https://www.robotanan.com</a>
             </font>
             <font style="vertical-align: inherit;">
                 <font style="vertical-align: inherit;">không cố ý thu thập bất kỳ Thông tin nhận dạng cá nhân nào từ trẻ
