--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset='UTF-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <meta name='viewport' content='width=device-width, initial-scale=1.0'>
-    <link rel="icon" href="./logo.png" />
+    <link rel="icon" href="https://w.ladicdn.com/5f894347cf7c1706e949fc45/logo-jpg-20230922031534-0zq7h.jpg" />
     <title>ANBI Privacy Policy</title>
 </head>
 
